# Previsao_Demanda_Prophet_LightLGBM

./: README.md  config.py  dash.py  pyproject.toml
data/processed/: df_ML_test.csv
models/: lista_de_features.joblib  prophet.joblib
notebooks/: 01.ETL_EDA.ipynb  02.Modelos.ipynb  03.Otimização_Modelo.ipynb  04.Previsao.ipynb  prophet.joblib
src/: data_processing.py  plotting.py  prediction.py
