[tool.poetry]
name = "projeto-previsao-demanda"
version = "0.1.0"
description = ""
authors = ["IgorGiraoSaraiva <saraivagiraoigor@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"
lightgbm = "^4.6.0"
numpy = "<2.0"
jupyter = "^1.1.1"
joblib = "^1.5.1"
plotly = "^6.2.0"
statsmodels = "^0.14.5"
holidays = "^0.78"
shap = "^0.48.0"
xgboost = "^3.0.4"
prophet = "^1.1.7"
optuna = "^4.4.0"
optuna-integration = {extras = ["lightgbm"], version = "^4.4.0"}
streamlit = "^1.48.1"
dash = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
